UI: Fixed truncated icon on confirmation dialogs

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -3893,7 +3893,7 @@ Dialogs*/
 }
 
 .ui-dialog.confirm .ui-dialog-title {
-  background: url(../images/icons.png) no-repeat 0px -225px;
+  background: url(../images/icons.png) no-repeat 0px -224px;
 }
 
 .ui-dialog.create-form .ui-dialog-title {
